[project]
name = "crew-scheduling"
version = "0.1.0"
description = "Crew scheduling experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
    "rl4co>=0.6.0",
    "streamlit>=1.48.1",
    "streamlit-plotly-events>=0.0.6",
]

[dependency-groups]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
  "ipykernel"
]

[tool.uv]
default-groups = ["dev"]
